# TipQuant

./: .gitignore  LICENSE.txt  README.md  environment.yml  pyproject.toml  requirements.txt  run_app.py  run_cli.py  setup.py
src/: PT_movies_for_nicolas.json  config.json  config.toml  fungae.json  new_pts.json  problematic_PTs.json  utils.py
src/core/: contour.py  measure.py  model.py  region.py  run.py  tip.py  utils.py
src/css/: style.css
src/ui/: app.py  plot.py  progressionbar.py  sidebar.py  utils.py
