[tool.poetry]
name = "tipquant"
version = "0.1.0"
description = ""
authors = ["Capgemini Invent"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "3.8.13"
altair = "4.2.0"
kaleido = "0.2.1"
opencv-python = "^4.10.0.84"
pandas = "1.5.1"
plotly = "^5.24.1"
shapely = "1.8.5"
scikit-image = "0.19.3"
scikit-learn = "1.1.2"
scikit-video = "^1.1.11"
streamlit = "1.13.0"
toml = "^0.10.2"
tqdm = "^4.66.6"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
