[tool.poetry]
name = "tipquant"
version = "1.0"
description = ""
authors = ["Capgemini Invent"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
scikit-image = "0.26.0"
scikit-learn = "1.8.0"
streamlit = "1.54.0"
opencv-python = "4.13.0.92"
pandas = "2.3.3"
plotly = "6.5.2"
shapely = "2.1.2"
tqdm = "4.67.3"
toml = "0.10.2"
kaleido = "1.2.0"

[tool.poetry.group.dev.dependencies]
notebook = "7.5.3"
pudb = "2025.1.5"
ipython = "9.10.0"
matplotlib = "3.10.8"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
